<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/tab_home" />
    <item
        android:id="@+id/nav_coming_soon"
        android:icon="@drawable/ic_coming_soon"
        android:title="@string/tab_coming_soon" />
    <item
        android:id="@+id/nav_my_list"
        android:icon="@drawable/ic_my_list"
        android:title="@string/tab_my_list" />
    <item
        android:id="@+id/nav_cinema"
        android:icon="@drawable/ic_cinema"
        android:title="@string/tab_cinema" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/tab_profile" />
</menu>
